[package]
name = "windebug_logger"
version = "0.1.0"
authors = ["yvt <i@yvt.jp>"]
edition = "2018"

[dependencies]
log = { version = "0.4", features = ["std"] }
wchar = "0.6.0"

[dependencies.winapi]
version = "0.3"
features = ["winbase", "debugapi", "stringapiset", "winnls", "datetimeapi",
	"sysinfoapi"]
