[package]
name = "windebug_logger"
version = "0.1.2"
authors = ["yvt <i@yvt.jp>"]
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/yvt/rust-windebug_logger"
description = """
A logger that redirects all messages to OutputDebugMessageW (Win32 API function).
"""
keywords = ["logger", "log", "logging", "win32", "windows"]
categories = ["development-tools::debugging"]

[dependencies]
log = { version = "0.4", features = ["std"] }
wchar = "0.6.0"

[dependencies.winapi]
version = "0.3"
features = ["winbase", "debugapi", "stringapiset", "winnls", "datetimeapi",
	"sysinfoapi"]

[badges]
maintenance = { status = "passively-maintained" }

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
